# rsomics-vcf-view

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: mixed.vcf
