[package]
name = "rsomics-vcf-view"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
description = "Subset and filter VCF records — Rust port of bcftools view"

[[bin]]
name = "rsomics-vcf-view"
path = "src/main.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
